<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.imcView.ImcActivity"
    android:nestedScrollingEnabled="true">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvIndicaciones"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="18dp"
            android:lines="3"
            android:text="@string/lableIndicacion"
            android:textColor="#1B1B1B"
            android:textSize="16sp"
            android:layout_gravity="center" />

        <EditText
            android:id="@+id/etPeso"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="36dp"
            android:ems="10"
            android:hint="@string/inputPeso"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/etAltura"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="36dp"
            android:ems="10"
            android:hint="@string/inputAltura"
            android:inputType="numberDecimal" />

        <Button
            android:id="@+id/btnCalcular"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:text="@string/buttonCalcular" />

        <TextView
            android:id="@+id/tvTituloRes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="24dp"
            android:text="@string/titleResultado"
            android:textColor="#1B1B1B"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvResultado"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="24dp"
            android:text="@string/labelResultado"
            android:textSize="32sp"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/tvRango"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="24dp"
            android:text="@string/labelRango"
            android:textSize="24sp"
            android:gravity="center"
            android:lines="2"/>

        <Button
            android:id="@+id/btnIntento"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="60dp"
            android:lines="2"
            android:text="@string/buttonIntento" />


    </LinearLayout>
</ScrollView>