<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.loginView.LoginActivity"
    android:nestedScrollingEnabled="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="18dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="32sp"
            android:layout_marginBottom="16dp"
            android:layout_gravity="center"
            android:text="@string/register__title" />

        <ImageView
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:src="@drawable/ic_person"
            android:layout_marginBottom="16dp"/>

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register__etEmail_hint"
            android:textSize="20sp"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register__etPassword_hint"
            android:textSize="20sp"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btnUnirme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register__btn" />

    </LinearLayout>



</ScrollView>
